My big Django project

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,11 +36,7 @@
     <div class="container">
         <div class="header-top">
             <div class="logo">
-                <a href="blog/index.html">N-AIR</a>
-            </div>
-            <div class="login-bars">
-                <a class="btn btn-default log-bar" href="blog/register.html" role="button">Sign up</a>
-
+                <a href="{% url 'shoes:home' %}">N-AIR</a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -66,12 +62,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Shop<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     {% for i in ctg %}
-                                        <li><a href="blog/products.html">{{ i.name }}</a></li>
+                                        <li><a href="/products/{{ i.slug }}">{{ i.name }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </li>
                             {% for i in ctg %}
-                                <li><a href="blog/contact.html">{{ i.name }}</a></li>
+                                <li><a href="/products/{{ i.slug }}">{{ i.name }}</a></li>
                             {% endfor %}
                             <div class="clearfix"></div>
                         </ul>
@@ -96,38 +92,27 @@
         <div class="col-md-2 re-ft-grd">
             <h3>Categories</h3>
             <ul class="categories">
-                <li><a href="#">Men</a></li>
-                <li><a href="#">Women</a></li>
-                <li><a href="#">Kids</a></li>
-                <li><a href="#">Formal</a></li>
-                <li><a href="#">Casuals</a></li>
-                <li><a href="#">Sports</a></li>
-            </ul>
-        </div>
-        <div class="col-md-2 re-ft-grd">
-            <h3>Short links</h3>
-            <ul class="shot-links">
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Delivery</a></li>
-                <li><a href="#">Return Policy</a></li>
-                <li><a href="#">Terms & conditions</a></li>
-                <li><a href="blog/contact.html">Sitemap</a></li>
+                <li><a href="/products/men/">Men</a></li>
+                <li><a href="/products/women/">Women</a></li>
+                <li><a href="/products/kids/">Kids</a></li>
+                <li><a href="/products/formal/">Formal</a></li>
+                <li><a href="/products/casual/">Casuals</a></li>
+                <li><a href="/products/sports/">Sports</a></li>
             </ul>
         </div>
         <div class="col-md-6 re-ft-grd">
             <h3>Social</h3>
             <ul class="social">
-                <li><a href="#" class="fb">facebook</a></li>
-                <li><a href="#" class="twt">twitter</a></li>
-                <li><a href="#" class="gpls">Telegram</a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100077052400928" class="fb">facebook</a></li>
+                <li><a href="https://twitter.com/mr_Richard_TM" class="twt">twitter</a></li>
+                <li><a href="https://t.me/TM_mrRichard" class="gpls">Telegram</a></li>
                 <div class="clearfix"></div>
             </ul>
         </div>
         <div class="col-md-2 re-ft-grd">
             <div class="bt-logo">
                 <div class="logo">
-                    <a href="blog/index.html" class="ft-log">N-AIR</a>
+                    <a href="{% url 'shoes:home' %}" class="ft-log">N-AIR</a>
                 </div>
             </div>
         </div>
