--- a/templates/blog/contact.html
+++ b/templates/blog/contact.html
@@ -4,7 +4,7 @@
     <div class="head-bread">
         <div class="container">
             <ol class="breadcrumb">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="{% url 'shoes:home' %}">Home</a></li>
                 <li class="active">Contact</li>
             </ol>
         </div>
