--- a/templates/blog/products.html
+++ b/templates/blog/products.html
@@ -4,7 +4,7 @@
     <div class="head-bread">
         <div class="container">
             <ol class="breadcrumb">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="{% url 'shoes:home' %}">Home</a></li>
                 <li class="active">PRODUCTS</li>
             </ol>
         </div>
@@ -17,16 +17,21 @@
                         <!-- normal -->
                         <div class="ih-item square effect3 bottom_to_top">
                             <div class="bottom-2-top">
-                                <div class="img"><img src="{{ i.image.url }}" alt="/" class="img-responsive gri-wid"></div>
+                                <div class="img"><img src="{{ i.image.url }}" alt="/" class="img-responsive gri-wid">
+                                </div>
                                 <div class="info">
                                     <div class="pull-left styl-hdn">
                                         <h3>{{ i.name }}</h3>
                                     </div>
                                     <div class="pull-right styl-price">
-                                        <p><a href="#" class="item_add"><span class="glyphicon glyphicon-shopping-cart grid-cart" aria-hidden="true"></span><span class=" item_price">{{ i.price }} {{ i.price_type }}</span></a></p>
+                                        <p><a href="#" class="item_add"><span
+                                                class="glyphicon glyphicon-shopping-cart grid-cart"
+                                                aria-hidden="true"></span><span
+                                                class=" item_price">{{ i.price }} {{ i.price_type }}</span></a></p>
                                     </div>
                                     <div class="clearfix"></div>
-                                </div></div>
+                                </div>
+                            </div>
                         </div>
                         <!-- end normal -->
                         <div class="quick-view">
@@ -37,11 +42,11 @@
                 <div class="clearfix"></div>
             </div>
             <div class="col-md-3 grid-details">
-                    <div class="grid-addon">
-        <div class="clearfix"></div>
+                <div class="grid-addon">
+                    <div class="clearfix"></div>
+                </div>
+            </div>
         </div>
     </div>
-        </div>
-    </div>
-</body>
+    </body>
 {% endblock content %}
