--- a/templates/blog/single.html
+++ b/templates/blog/single.html
@@ -4,8 +4,7 @@
     <div class="head-bread">
         <div class="container">
             <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Men</a></li>
+                <li><a href="{% url 'shoes:home' %}">Home</a></li>
                 <li class="active">Shop</li>
             </ol>
         </div>
@@ -30,7 +29,6 @@
                         <p>{{ product_pk.types.name }}</p>
                         <p>{{ product_pk.character }}</p>
                         <h4>{{ product_pk.price }} {{ product_pk.price_type }}</h4>
-                        <h4>&#36;190</h4>
                     </div>
                     <div class="pull-left rating-stars">
                         <ul>
@@ -205,7 +203,7 @@
                         <div class="info">
                             <input class="fname" type="text" name="name" id="single-name" placeholder="Name">
                             <input class="fname" type="email" name="email" id="single-email" placeholder="Email">
-                            <input class="fname" type="text" name="phone" id="single-phone" placeholder="Phone numbe">
+                            <input class="fname" type="text" name="phone" id="single-phone" placeholder="Phone number">
                             <div class="form-group">
                                 <textarea class="form-control" name="map" id="message" cols="30" rows="2"
                                           placeholder="Location"></textarea>
@@ -284,87 +282,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    < class="you-might-like">
-    <div class="container">
-        <h3 class="you-might">Products You May Like</h3>
-        <div class="col-md-4 grid-stn simpleCart_shelfItem">
-            <!-- normal -->
-            <div class="ih-item square effect3 bottom_to_top">
-                <div class="bottom-2-top">
-                    <div class="img"><img src="../../static/images/grid4.jpg" alt="/" class="img-responsive gri-wid">
-                    </div>
-                    <div class="info">
-                        <div class="pull-left styl-hdn">
-                            <h3>style 01</h3>
-                        </div>
-                        <div class="pull-right styl-price">
-                            <p><a href="#" class="item_add"><span class="glyphicon glyphicon-shopping-cart grid-cart"
-                                                                  aria-hidden="true"></span> <span
-                                    class=" item_price">$190</span></a>
-                            </p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- end normal -->
-            <div class="quick-view">
-                <a href="single.html">Quick view</a>
-            </div>
-        </div>
-        <div class="col-md-4 grid-stn simpleCart_shelfItem">
-            <!-- normal -->
-            <div class="ih-item square effect3 bottom_to_top">
-                <div class="bottom-2-top">
-                    <div class="img"><img src="../../static/images/grid6.jpg" alt="/" class="img-responsive gri-wid">
-                    </div>
-                    <div class="info">
-                        <div class="pull-left styl-hdn">
-                            <h3>style 01</h3>
-                        </div>
-                        <div class="pull-right styl-price">
-                            <p><a href="#" class="item_add"><span class="glyphicon glyphicon-shopping-cart grid-cart"
-                                                                  aria-hidden="true"></span> <span
-                                    class=" item_price">$190</span></a>
-                            </p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- end normal -->
-            <div class="quick-view">
-                <a href="single.html">Quick view</a>
-            </div>
-        </div>
-        <div class="col-md-4 grid-stn simpleCart_shelfItem">
-            <!-- normal -->
-            <div class="ih-item square effect3 bottom_to_top">
-                <div class="bottom-2-top">
-                    <div class="img"><img src="../../static/images/grid3.jpg" alt="/" class="img-responsive gri-wid">
-                    </div>
-                    <div class="info">
-                        <div class="pull-left styl-hdn">
-                            <h3>style 01</h3>
-                        </div>
-                        <div class="pull-right styl-price">
-                            <p><a href="#" class="item_add"><span class="glyphicon glyphicon-shopping-cart grid-cart"
-                                                                  aria-hidden="true"></span> <span
-                                    class=" item_price">$190</span></a>
-                            </p>
-                        </div>
-                        <div class="clearfix"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- end normal -->
-            <div class="quick-view">
-                <a href="single.html">Quick view</a>
-            </div>
-        </div>
-        <div class="clearfix"></div>
     </div>
     </body>
 {% endblock content %}
